--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
 </head>
 <body>
   <div class="container">
-    <img src="logo.png" alt="Logo Trường" class="logo">
+    <img src="logo.png" alt="Logo trường THPT Võ Văn Kiệt" class="logo">
     <h1>Tra cứu điểm tuyển sinh lớp 10</h1>
     <input type="text" id="sbdInput" placeholder="Nhập số báo danh">
     <button onclick="traCuu()">Tra cứu</button>
     <div id="ketQua" class="result"></div>
   </div>
-  <footer>© 2025 by Truong Minh Khiem</footer>
+  <footer>© 2025 by Truong Minh Khiem || A6 2023 - 2026</footer>
+  <footer>
+  Contact: <a href="https://www.facebook.com/remyvn.khiemtruong" target="_blank">
+    <i class="fab fa-facebook"></i> Facebook
+  </a>
+  </footer>
   <script src="data.js"></script>
   <script src="script.js"></script>
 </body>
