--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="vi">
 <head>
@@ -11,16 +10,30 @@
   <div class="container">
     <img src="logo.png" alt="Logo trường THPT Võ Văn Kiệt" class="logo">
     <h1>Tra cứu điểm tuyển sinh lớp 10</h1>
+
     <input type="text" id="sbdInput" placeholder="Nhập số báo danh">
     <button onclick="traCuu()">Tra cứu</button>
+
+    <div id="luuY" class="notice-box">
+      <h3>📌 Lưu ý:</h3>
+      <ul>
+        <li>Vui lòng nhập đúng <strong>số báo danh</strong> (không chứa dấu cách hoặc ký tự đặc biệt).</li>
+        <li>Kết quả hiển thị chỉ mang tính chất tham khảo.</li>
+        <li>Liên hệ Facebook phía dưới nếu bạn gặp sự cố trong quá trình tra cứu.</li>
+      </ul>
+    </div>
+
     <div id="ketQua" class="result"></div>
   </div>
-  <footer>© 2025 by Truong Minh Khiem || A6 2023 - 2026</footer>
+
   <footer>
-  Contact: <a href="https://www.facebook.com/remyvn.khiemtruong" target="_blank">
-    <i class="fab fa-facebook"></i> Facebook
-  </a>
+    © 2025 by Truong Minh Khiem || A6 2023 - 2026<br>
+    Contact: 
+    <a href="https://www.facebook.com/remyvn.khiemtruong" target="_blank">
+      <i class="fab fa-facebook"></i> Facebook
+    </a>
   </footer>
+
   <script src="data.js"></script>
   <script src="script.js"></script>
 </body>
