--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tra cứu điểm tuyển sinh</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div class="container">
-    <img src="logo.png" alt="Logo trường THPT Võ Văn Kiệt" class="logo">
+    <img src="logo.png" alt="Logo trường THPT Võ Văn Kiệt" class="logo" />
     <h1>Tra cứu điểm tuyển sinh lớp 10</h1>
 
-    <input type="text" id="sbdInput" placeholder="Nhập số báo danh">
+    <input type="text" id="sbdInput" placeholder="Nhập số báo danh" />
     <button onclick="traCuu()">Tra cứu</button>
 
     <div id="luuY" class="notice-box">
@@ -27,8 +27,8 @@
   </div>
 
   <footer>
-    © 2025 by Truong Minh Khiem || A6 2023 - 2026<br>
-    Contact: 
+    © 2025 by Truong Minh Khiem — A6 (2023–2026)<br />
+    Contact:
     <a href="https://www.facebook.com/remyvn.khiemtruong" target="_blank">
       <i class="fab fa-facebook"></i> Facebook
     </a>
