--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="vi">
 <head>
@@ -5,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tra cứu điểm tuyển sinh</title>
   <link rel="stylesheet" href="style.css" />
+  <script src="data.js" defer></script>
+  <script src="script.js" defer></script>
 </head>
 <body>
   <div class="container">
@@ -33,8 +36,5 @@
       <i class="fab fa-facebook"></i> Facebook
     </a>
   </footer>
-
-  <script src="data.js"></script>
-  <script src="script.js"></script>
 </body>
 </html>
