Add basic statistics view

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 
     <input type="text" id="sbdInput" placeholder="Nhập số báo danh" />
     <button onclick="traCuu()">Tra cứu</button>
-
-    
+    <button onclick="hienThiThongKe()">Xem thống kê</button>
 
     <div id="ketQua" class="result"></div>
     <div id="luuY" class="notice-box">
@@ -28,6 +27,7 @@
         <li>Liên hệ Facebook phía dưới nếu bạn gặp sự cố trong quá trình tra cứu.</li>
       </ul>
     </div>
+    <div id="thongKe" class="stats"></div>
   </div>
 
   <footer>
