--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="vi">
 <head>
@@ -5,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Tra cứu điểm tuyển sinh</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
   <script src="data.js" defer></script>
   <script src="script.js" defer></script>
 </head>
@@ -18,6 +18,7 @@
     <button onclick="traCuu()">Tra cứu</button>
 
     
+    <button onclick="hienThiThongKe()">Xem thống kê</button>
 
     <div id="ketQua" class="result"></div>
     <div id="luuY" class="notice-box">
@@ -28,6 +29,7 @@
         <li>Liên hệ Facebook phía dưới nếu bạn gặp sự cố trong quá trình tra cứu.</li>
       </ul>
     </div>
+    <div id="thongKe" class="stats"></div>
   </div>
 
   <footer>
