Enhance search and statistics

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img src="logo.png" alt="Logo trường THPT Võ Văn Kiệt" class="logo" />
     <h1>Tra cứu điểm tuyển sinh lớp 10</h1>
 
-    <input type="text" id="sbdInput" placeholder="Nhập số báo danh" />
+    <input type="text" id="sbdInput" placeholder="Nhập số báo danh hoặc tên" />
     <button onclick="traCuu()">Tra cứu</button>
 
     
@@ -24,7 +24,7 @@
     <div id="luuY" class="notice-box">
       <h3>📌 Lưu ý:</h3>
       <ul>
-        <li>Vui lòng nhập đúng <strong>số báo danh</strong> (không chứa dấu cách hoặc ký tự đặc biệt).</li>
+        <li>Vui lòng nhập đúng <strong>số báo danh hoặc tên</strong> (không chứa ký tự đặc biệt).</li>
         <li>Kết quả hiển thị chỉ mang tính chất tham khảo.</li>
         <li>Liên hệ Facebook phía dưới nếu bạn gặp sự cố trong quá trình tra cứu.</li>
       </ul>
