--- a/index.html
+++ b/index.html
@@ -1,43 +1,139 @@
-
+<!-- GIAI DOAN 1 + 2 + 3: THIET KE GIAO DIEN + GOOGLE SHEETS + IMPORT CSV -->
 <!DOCTYPE html>
 <html lang="vi">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tra cứu điểm tuyển sinh</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="data.js" defer></script>
-  <script src="script.js" defer></script>
+  <title>Tra cứu tuyển sinh</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" href="logo.png" />
 </head>
-<body>
-  <div class="container">
-    <img src="logo.png" alt="Logo trường THPT Võ Văn Kiệt" class="logo" />
-    <h1>Tra cứu điểm tuyển sinh lớp 10</h1>
+<body class="bg-gray-100 text-gray-800">
+  <div class="max-w-3xl mx-auto p-4">
+    <!-- Logo + Tiêu đề -->
+    <div class="flex flex-col items-center mb-6">
+      <img src="logo.png" alt="Logo" class="w-24 mb-2" />
+      <h1 class="text-2xl font-bold text-blue-600">Tra cứu điểm tuyển sinh lớp 10</h1>
+    </div>
 
-    <input type="text" id="sbdInput" placeholder="Nhập số báo danh hoặc tên" />
-    <button onclick="traCuu()">Tra cứu</button>
+    <!-- Ô nhập + nút tra cứu -->
+    <div class="flex flex-col sm:flex-row gap-2 items-center justify-center mb-4">
+      <input type="text" id="sbdInput" placeholder="Nhập số báo danh hoặc họ tên"
+        class="w-full sm:w-2/3 px-4 py-2 border border-gray-300 rounded-md shadow-sm" />
+      <button onclick="traCuu()"
+        class="bg-blue-600 hover:bg-blue-700 text-white font-semibold px-6 py-2 rounded-md">Tra cứu</button>
+    </div>
 
-    
-    <button onclick="hienThiThongKe()">Xem thống kê</button>
+    <!-- Nút thống kê và Dark Mode -->
+    <div class="flex flex-wrap gap-2 justify-center mb-4">
+      <button onclick="hienThiThongKe()" class="bg-green-600 hover:bg-green-700 text-white px-5 py-2 rounded">Thống kê</button>
+      <button onclick="toggleDarkMode()" class="bg-gray-600 hover:bg-gray-700 text-white px-5 py-2 rounded">Dark Mode</button>
+      <button onclick="xuatPDF()" class="bg-purple-600 hover:bg-purple-700 text-white px-5 py-2 rounded">Xuất PDF</button>
+    </div>
 
-    <div id="ketQua" class="result"></div>
-    <div id="luuY" class="notice-box">
-      <h3>📌 Lưu ý:</h3>
-      <ul>
-        <li>Vui lòng nhập đúng <strong>số báo danh hoặc tên</strong> (không chứa ký tự đặc biệt).</li>
-        <li>Kết quả hiển thị chỉ mang tính chất tham khảo.</li>
-        <li>Liên hệ Facebook phía dưới nếu bạn gặp sự cố trong quá trình tra cứu.</li>
+    <!-- Import file CSV -->
+    <div class="flex justify-center mb-4">
+      <input type="file" id="csvFileInput" accept=".csv" class="text-sm" />
+    </div>
+
+    <!-- Kết quả tra cứu -->
+    <div id="ketQua" class="bg-white rounded-md shadow p-4 mb-4"></div>
+
+    <!-- Thống kê -->
+    <div id="thongKe" class="bg-white rounded-md shadow p-4"></div>
+
+    <!-- Lưu ý -->
+    <div class="mt-6 bg-yellow-100 border-l-4 border-yellow-500 p-4">
+      <h2 class="font-bold text-yellow-700 mb-2">Lưu ý:</h2>
+      <ul class="list-disc pl-5 text-sm text-yellow-800">
+        <li>Hệ thống hỗ trợ tìm theo số báo danh hoặc tên (không phân biệt chữ hoa/thường).</li>
+        <li>Có thể nhập dữ liệu từ Google Sheet hoặc file CSV.</li>
+        <li>Kết quả mang tính chất tham khảo. Hãy liên hệ trường để biết thêm thông tin.</li>
+        <li>Click "Xuất PDF" để tải phiếu điểm cá nhân.</li>
+        <li>Click "Thống kê" để xem biểu đồ, phân tích điểm.</li>
       </ul>
     </div>
-    <div id="thongKe" class="stats"></div>
+
+    <!-- Footer -->
+    <footer class="text-center text-xs text-gray-500 mt-6">
+      © 2025 - Developed by Truong Minh Khiem - A6 THPT VVK <br/>
+      <a href="https://facebook.com/remyvn.khiemtruong" target="_blank" class="text-blue-500 hover:underline">Facebook liên hệ</a>
+    </footer>
   </div>
 
-  <footer>
-    © 2025 by Truong Minh Khiem — A6 (2023–2026)<br />
-    Contact:
-    <a href="https://www.facebook.com/remyvn.khiemtruong" target="_blank">
-      <i class="fab fa-facebook"></i> Facebook
-    </a>
-  </footer>
+  <script>
+    let data = [];
+
+    // Giai đoạn 2: Lấy dữ liệu từ Google Sheets công khai (chế độ "publish to web")
+    const GOOGLE_SHEET_URL = 'https://docs.google.com/spreadsheets/d/e/2PACX-1v.../pub?output=csv';
+
+    function fetchDataFromGoogleSheet() {
+      fetch(GOOGLE_SHEET_URL)
+        .then(res => res.text())
+        .then(csv => parseCSV(csv))
+        .catch(err => alert("Không thể tải dữ liệu Google Sheet"));
+    }
+
+    function parseCSV(csvText) {
+      const lines = csvText.split('\n');
+      const headers = lines[0].split(',');
+      data = lines.slice(1).map(row => {
+        const values = row.split(',');
+        const entry = {};
+        headers.forEach((key, i) => entry[key.trim()] = values[i]?.trim());
+        return entry;
+      });
+    }
+
+    document.getElementById("csvFileInput").addEventListener("change", (e) => {
+      const file = e.target.files[0];
+      if (!file) return;
+      const reader = new FileReader();
+      reader.onload = () => parseCSV(reader.result);
+      reader.readAsText(file);
+    });
+
+    function traCuu() {
+      const val = document.getElementById("sbdInput").value.trim().toLowerCase();
+      const ketQua = document.getElementById("ketQua");
+      if (!val) return ketQua.innerHTML = "<p class='text-red-600'>Vui lòng nhập SBD hoặc tên</p>";
+
+      const matches = data.filter(d => d['SBD']?.toLowerCase() === val || d['Họ và tên']?.toLowerCase().includes(val));
+      if (matches.length === 0) return ketQua.innerHTML = "<p class='text-red-600'>Không tìm thấy thí sinh</p>";
+
+      const hs = matches[0];
+      ketQua.innerHTML = `
+        <table class="table-auto w-full text-sm">
+          <tr><td class='font-bold'>Họ và tên:</td><td>${hs['Họ và tên']}</td></tr>
+          <tr><td class='font-bold'>Trường:</td><td>${hs['Trường']}</td></tr>
+          <tr><td class='font-bold'>Ngữ văn:</td><td>${hs['Ngữ văn']}</td></tr>
+          <tr><td class='font-bold'>Tiếng Anh:</td><td>${hs['Tiếng Anh']}</td></tr>
+          <tr><td class='font-bold'>Toán:</td><td>${hs['Toán']}</td></tr>
+          <tr><td class='font-bold'>Tổng điểm:</td><td class='font-bold text-blue-700'>${hs['Tổng điểm']}</td></tr>
+        </table>
+      `;
+    }
+
+    function hienThiThongKe() {
+      const thongKe = document.getElementById("thongKe");
+      if (!data.length) return thongKe.innerHTML = "<p class='text-red-500'>Không có dữ liệu thống kê</p>";
+
+      const tong = data.reduce((sum, hs) => sum + parseFloat(hs['Tổng điểm'] || 0), 0);
+      const tb = (tong / data.length).toFixed(2);
+      thongKe.innerHTML = `<p>Điểm trung bình toàn khối: <strong>${tb}</strong></p>`;
+    }
+
+    function toggleDarkMode() {
+      document.body.classList.toggle("bg-gray-900");
+      document.body.classList.toggle("text-white");
+    }
+
+    function xuatPDF() {
+      window.print();
+    }
+
+    // Tự động tải dữ liệu Google Sheet nếu không dùng file CSV
+    fetchDataFromGoogleSheet();
+  </script>
 </body>
 </html>
