--- a/index.html
+++ b/index.html
@@ -1,39 +1,79 @@
-
 <!DOCTYPE html>
 <html lang="vi">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Tra cứu điểm tuyển sinh</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script src="https://unpkg.com/heroicons@1.0.6"></script>
-  <link rel="icon" href="logo.png" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Tra cứu tuyển sinh lớp 10 - THPT Võ Văn Kiệt</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"/>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script defer src="script.js"></script>
+  <style>
+    body.dark-mode { background-color: #121212; color: white; }
+    .dark-mode .table, .dark-mode .form-control, .dark-mode .form-select { background-color: #1e1e1e; color: white; }
+    .highlight-fail { background-color: #ffe5e5; }
+    .card-student { border: 1px solid #ddd; border-radius: 10px; padding: 1rem; margin-bottom: 1rem; background-color: #fff; }
+    .dark-mode .card-student { background-color: #2c2c2c; color: white; }
+    .btn-toggle-mode { position: absolute; top: 1rem; right: 1rem; z-index: 100; }
+    @media print {
+      .no-print, .form-control, .form-select, .btn { display: none !important; }
+      body { background: white !important; color: black !important; }
+    }
+  </style>
 </head>
-<body class="bg-gray-100 text-gray-800 min-h-screen flex flex-col items-center px-4 py-6">
-  <div class="w-full max-w-3xl">
-    <!-- Header -->
-    <header class="text-center mb-10">
-      <img src="logo.png" alt="Logo" class="mx-auto w-24 mb-4" />
-      <h1 class="text-3xl font-bold text-blue-700">Tra cứu điểm tuyển sinh lớp 10</h1>
-      <p class="text-sm text-gray-500 mt-1">Dành cho học sinh thi vào THPT</p>
-    </header>
-
-    <!-- Tra cứu -->
-    <section class="bg-white p-6 rounded-xl shadow-md">
-      <div class="flex flex-col sm:flex-row items-center gap-4 mb-4">
-        <input type="text" id="sbdInput" placeholder="Nhập SBD hoặc Họ tên..." class="w-full flex-1 p-3 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500" />
-        <button onclick="traCuu()" class="px-6 py-3 bg-blue-600 text-white rounded-md hover:bg-blue-700 transition-all">🔍 Tra cứu</button>
-      </div>
-      <div id="ketQua" class="text-sm mt-6 space-y-2"></div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="text-center text-xs text-gray-400 mt-10">
-      &copy; 2025 TMKhiem - Hệ thống tra cứu điểm thi tuyển sinh
-    </footer>
+<body>
+  <!-- Landing Page -->
+  <div id="landingPage" class="container text-center py-5">
+    <img src="logo.png" alt="Logo" style="max-width:120px;" class="mb-3">
+    <h1 class="text-primary">Trường THPT Võ Văn Kiệt</h1>
+    <h4 class="mb-3">Hệ thống tra cứu điểm tuyển sinh lớp 10 (2025 - 2026)</h4>
+    <p class="text-muted">Dữ liệu mang tính tham khảo. Mọi sai sót vui lòng liên hệ nhà trường.</p>
+    <button class="btn btn-primary btn-lg" onclick="startApp()">🚀 Bắt đầu tra cứu</button>
   </div>
 
-  <script src="data.js"></script>
-  <script src="script.js"></script>
+  <!-- Main App -->
+  <div id="mainApp" class="container py-4 d-none position-relative">
+    <button class="btn btn-outline-dark btn-sm btn-toggle-mode no-print" onclick="toggleDarkMode()">🌓</button>
+
+    <h3 class="text-primary text-center mb-4">🎓 Tra cứu kết quả tuyển sinh lớp 10</h3>
+
+    <div class="row g-3 align-items-end no-print mb-3">
+      <div class="col-md-3"><input type="text" id="searchInput" class="form-control" placeholder="Tìm theo tên hoặc SBD"></div>
+      <div class="col-md-2"><select id="filterSchool" class="form-select"><option value="">🏫 Trường</option></select></div>
+      <div class="col-md-2"><select id="filterClass" class="form-select"><option value="">📘 Lớp</option></select></div>
+      <div class="col-md-2"><select id="filterResult" class="form-select">
+        <option value="">🎯 Kết quả</option>
+        <option value="Đạt">✅ Đạt</option>
+        <option value="Trượt">⚠️ Trượt</option>
+      </select></div>
+      <div class="col-md-2"><input type="number" id="filterMin" class="form-control" placeholder="Điểm từ"></div>
+      <div class="col-md-1 d-grid"><button class="btn btn-primary" onclick="renderTable()">Lọc</button></div>
+    </div>
+
+    <div class="form-check form-switch no-print mb-3">
+      <input class="form-check-input" type="checkbox" role="switch" id="toggleCard" onchange="renderTable()">
+      <label class="form-check-label" for="toggleCard">Hiển thị dạng thẻ học sinh</label>
+    </div>
+
+    <div id="tableContainer" class="table-responsive">
+      <table class="table table-bordered table-hover text-center align-middle">
+        <thead class="table-dark">
+          <tr>
+            <th>SBD</th><th>Họ và tên</th><th>Trường</th><th>Lớp</th>
+            <th>Văn</th><th>Toán</th><th>Anh</th><th>UT</th><th>KK</th><th>Tổng</th><th>KQ</th>
+          </tr>
+        </thead>
+        <tbody id="tableBody"></tbody>
+      </table>
+    </div>
+
+    <div class="row d-none" id="cardContainer"></div>
+
+    <div class="text-center text-danger d-none" id="noResult">Không tìm thấy kết quả phù hợp.</div>
+
+    <hr class="my-4"/>
+    <h5 class="text-center mb-3">📊 Biểu đồ thống kê theo trường</h5>
+    <canvas id="chartSchool"></canvas>
+  </div>
 </body>
 </html>
