--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script defer src="script.js"></script>
   <style>
     body.dark-mode { background-color: #121212; color: white; }
@@ -92,7 +94,27 @@
   </div>
 </div>
 
-<!-- Thống kê học lực, lớp, môn -->
+  <div class="row mb-4">
+    <div class="col-md-6">
+      <h5 class="text-center mb-3">📊 Điểm TB theo trường</h5>
+      <canvas id="chartSchool"></canvas>
+    </div>
+    <div class="col-md-6">
+      <h5 class="text-center mb-3">📊 Phân loại học lực</h5>
+      <canvas id="chartHocLuc"></canvas>
+    </div>
+  </div>
+
+  <div class="row mb-4">
+    <div class="col-md-6">
+      <h5 class="text-center mb-3">📘 Điểm TB theo lớp</h5>
+      <canvas id="chartLop"></canvas>
+    </div>
+    <div class="col-md-6">
+      <h5 class="text-center mb-3">📚 Điểm TB theo môn</h5>
+      <canvas id="chartMon"></canvas>
+    </div>
+  </div>
 
 
 <!-- Đa ngôn ngữ -->
