--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <thead class="table-dark">
           <tr>
             <th>SBD</th><th>Họ và tên</th><th>Trường</th><th>Lớp</th>
-            <th>Văn</th><th>Toán</th><th>Anh</th><th>UT</th><th>KK</th><th>Tổng</th><th>KQ</th>
+            <th>Ngữ Văn</th><th>Toán</th><th>Tiếng Anh</th><th>ƯT</th><th>KK</th><th>Tổng</th><th>Kết quả</th>
           </tr>
         </thead>
         <tbody id="tableBody"></tbody>
